fix link color in portlet and article whitespace handling

--- a/article.scss
+++ b/article.scss
@@ -9,6 +9,7 @@ article {
     font-size: .9rem;
     color: #48465b;
     line-height: 2rem;
+    white-space: normal;
 
     del, ins {
         padding: 3px;
